[gd_scene load_steps=2 format=3 uid="uid://cmopyk7kjtsas"]

[ext_resource type="Script" path="res://menus/main_menu.gd" id="1_32ytp"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_32ytp")

[node name="ButtonNewGame" type="Button" parent="."]
offset_left = 556.0
offset_top = 284.0
offset_right = 649.0
offset_bottom = 315.0
focus_neighbor_bottom = NodePath("../ButtonMarathon")
text = "New Game"

[node name="ButtonMarathon" type="Button" parent="."]
offset_left = 561.0
offset_top = 330.0
offset_right = 646.0
offset_bottom = 361.0
focus_neighbor_top = NodePath("../ButtonNewGame")
focus_neighbor_bottom = NodePath("../ButtonHighScores")
text = "Marathon"

[node name="ButtonHighScores" type="Button" parent="."]
offset_left = 554.0
offset_top = 370.0
offset_right = 653.0
offset_bottom = 401.0
focus_neighbor_top = NodePath("../ButtonMarathon")
focus_neighbor_bottom = NodePath("../ButtonSettings")
text = "High Scores
"

[node name="ButtonSettings" type="Button" parent="."]
offset_left = 569.0
offset_top = 415.0
offset_right = 639.0
offset_bottom = 446.0
focus_neighbor_top = NodePath("../ButtonHighScores")
focus_neighbor_bottom = NodePath("../ButtonExit")
text = "Settings"

[node name="ButtonExit" type="Button" parent="."]
offset_left = 588.0
offset_top = 473.0
offset_right = 625.0
offset_bottom = 504.0
focus_neighbor_top = NodePath("../ButtonSettings")
text = "Exit"
